[gd_scene load_steps=16 format=3 uid="uid://c1v2fp6vhvm61"]

[ext_resource type="Script" path="res://scripts/entities/units/entity_unit_commander.gd" id="1_1tg1e"]
[ext_resource type="Texture2D" uid="uid://bjt0k044b2tli" path="res://assets/entities/units/knight/knight_1.png" id="2_7vnwk"]
[ext_resource type="Script" path="res://scripts/entities/components/component_signal_processor.gd" id="2_t84xm"]
[ext_resource type="Script" path="res://scripts/entities/rendering/unit_sprite.gd" id="3_ow7tr"]
[ext_resource type="Script" path="res://scripts/entities/components/component_entity_health.gd" id="4_b7fa1"]
[ext_resource type="Script" path="res://scripts/entities/components/component_entity_status_effects.gd" id="5_8i1x2"]
[ext_resource type="Texture2D" uid="uid://5se6f7x6gec1" path="res://assets/ui/unit_gui_icons/basic_unit_emblem.png" id="6_d1xg6"]
[ext_resource type="Script" path="res://scripts/entities/components/component_entity_movement.gd" id="6_p7taw"]
[ext_resource type="Script" path="res://scripts/entities/components/component_entity_interact.gd" id="8_4kspy"]
[ext_resource type="PackedScene" uid="uid://day2ydimag0je" path="res://scenes/units/components/process_state_machine_unit.tscn" id="9_h830u"]
[ext_resource type="Script" path="res://scripts/entities/components/interactions/attacks/attack_light_attack.gd" id="10_tlcxi"]
[ext_resource type="Script" path="res://scripts/entities/components/interactions/attacks/attack_heavy_attack.gd" id="12_qt5wd"]
[ext_resource type="Script" path="res://scripts/entities/components/component_entity_status_bars.gd" id="14_3rui4"]
[ext_resource type="PackedScene" uid="uid://bo3uimjjqhsre" path="res://scenes/gui/status_bar.tscn" id="15_f3je2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vfqr0"]
height = 34.0

[node name="entity_unit_commander" type="Node2D"]
scale = Vector2(2.5, 2.5)
script = ExtResource("1_1tg1e")

[node name="component_signal_processor" type="Node" parent="."]
script = ExtResource("2_t84xm")

[node name="unit_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_7vnwk")
offset = Vector2(0, -13)
script = ExtResource("3_ow7tr")
shadow_angle = 30.0

[node name="shadow_sprite" type="Sprite2D" parent="unit_sprite"]
modulate = Color(0, 0, 0, 0.392157)
show_behind_parent = true
position = Vector2(0, 4)
scale = Vector2(0.75, 0.1)
texture = ExtResource("2_7vnwk")
offset = Vector2(0, -13)

[node name="unit_area" type="Area2D" parent="unit_sprite"]

[node name="unit_collision_shape" type="CollisionShape2D" parent="unit_sprite/unit_area"]
position = Vector2(0.666666, -12.3333)
shape = SubResource("CapsuleShape2D_vfqr0")
debug_color = Color(0, 0.6, 0.701961, 0.505882)

[node name="hostile_unit_emblem" type="Sprite2D" parent="unit_sprite"]
position = Vector2(12, -26)
texture = ExtResource("6_d1xg6")

[node name="component_entity_health" type="Node2D" parent="."]
script = ExtResource("4_b7fa1")

[node name="component_entity_status_effects" type="Node2D" parent="."]
script = ExtResource("5_8i1x2")

[node name="component_entity_movement" type="Node2D" parent="."]
script = ExtResource("6_p7taw")
max_movement_points = 2.0

[node name="process_state_machine_unit" parent="component_entity_movement" instance=ExtResource("9_h830u")]

[node name="component_entity_interact" type="Node2D" parent="."]
script = ExtResource("8_4kspy")
_base_damage = 2

[node name="attack_light_attack" type="Node" parent="component_entity_interact"]
script = ExtResource("10_tlcxi")

[node name="attack_heavy_attack" type="Node" parent="component_entity_interact"]
script = ExtResource("12_qt5wd")

[node name="component_entity_status_bars" type="Node2D" parent="."]
script = ExtResource("14_3rui4")

[node name="health_bar" parent="component_entity_status_bars" instance=ExtResource("15_f3je2")]
position = Vector2(4, -36)
background_color = Color(0.470588, 0.470588, 0.470588, 0.784314)

[node name="movement_bar" parent="component_entity_status_bars" instance=ExtResource("15_f3je2")]
position = Vector2(3.66667, -33.3333)
main_color = Color(0, 0, 1, 1)
background_color = Color(0.470588, 0.470588, 0.470588, 0.784314)

[connection signal="mouse_entered" from="unit_sprite/unit_area" to="component_signal_processor" method="_on_open_unit_tooltip"]
[connection signal="mouse_exited" from="unit_sprite/unit_area" to="component_signal_processor" method="_on_close_unit_tooltip"]
